Fixing jumping header by forcing the scrollbar

--- a/css/jkl-tachyons.scss
+++ b/css/jkl-tachyons.scss
@@ -34,6 +34,7 @@
 html {
    /*font-family: Benton Sans; /* 1 */
    font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;
+   overflow-y:scroll;
 }
 
 /*@font-face {
